fix: change select options color for readability

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -49,6 +49,10 @@
     background-color: transparent;
     color: var(--clr-white);
     font-weight: bold;
+
+    & option {
+      color: var(--clr-blue-600);
+    }
   }
 
   & .btn {
